<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home">
        </item>

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map">
        </item>

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list">
        </item>

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_register"
            android:title="@string/register">
        </item>

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info">
        </item>

    </group>
</menu>