<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/name_form">
                    
                </TextView>
                
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/name_hint_form">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/cc_form">

                </TextView>

                <EditText
                    android:id="@+id/cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="8"
                    android:hint="@string/cc_hint_form">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/district_form">

                </TextView>

                <Spinner
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/date_form">

                </TextView>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:text="0">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/photo_form">

                </TextView>

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_photo"
                    android:layout_gravity="center">
                </ImageView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/required_fields"
                android:paddingBottom="40dp">
            </TextView>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/submit_button"
                android:textColor="@color/white"
                android:layout_gravity="center">
            </Button>

        </LinearLayout>

    </ScrollView>

</FrameLayout>