<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_localization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_localization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/localization_details"
                    android:paddingBottom="10dp">

                </TextView>

                <TextView
                    android:id="@+id/localization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/state_details"
                    android:paddingBottom="10dp">

                </TextView>

                <TextView
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="">

                </TextView>

                <TextView
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_utility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_utility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/operational_details"
                    android:paddingBottom="10dp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="3">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_plane">
                        </ImageView>

                        <TextView
                            android:id="@+id/planes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="0"
                            android:layout_gravity="center">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="3">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_car">
                        </ImageView>

                        <TextView
                            android:id="@+id/cars"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="0"
                            android:layout_gravity="center">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_person">
                        </ImageView>

                        <TextView
                            android:id="@+id/peoples"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="0"
                            android:layout_gravity="center">
                        </TextView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/photos_details"
                    android:paddingBottom="10dp">

                </TextView>

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_photo">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_observations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/observations_details"
                    android:paddingBottom="10dp">

                </TextView>

                <TextView
                    android:id="@+id/observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_name_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/label_name_cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/name_cc_details"
                    android:paddingBottom="10dp">

                </TextView>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/name_details">

                </TextView>

                <TextView
                    android:id="@+id/cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/cc_details">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>