<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fire_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_active"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="10dp">
            </TextView>

            <TextView
                android:id="@+id/fire_active_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp">
            </View>

            <TextView
                android:id="@+id/fire_active_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_active_district"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="10dp">
            </TextView>

            <TextView
                android:id="@+id/fire_active_district_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp">
            </View>

            <TextView
                android:id="@+id/fire_active_municipality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_active_municipality"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="10dp">
            </TextView>

            <TextView
                android:id="@+id/fire_active_municipality_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="15dp">
            </View>

            <TextView
                android:id="@+id/risk_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/risk_levels"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/risk_levels">
            </ImageView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_refresh" />

</FrameLayout>